[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "pyavd-utils"
version = "0.0.1"

[tool.setuptools.packages.find]
include = []

[[tool.setuptools-rust.ext-modules]]
target = "pyavd_tools.passwords"
path = "rust/passwords/Cargo.toml"
binding = "PyO3"
